--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Test Sayfası</title>
 </head>
 <body>
-    <h1>Merhaba Dünya!</h1>
+    <h1>google.com, pub-8284577872150859, DIRECT, f08c47fec0942fa0</h1>
 </body>
 </html>
